fixing spacing on blockquote

--- a/scss/blog-body.scss
+++ b/scss/blog-body.scss
@@ -68,6 +68,9 @@
         margin: 0;
       }
     }
+    h3 + blockquote {
+      margin-top: 10px;
+    }
     .post-meta,
     .categories {
       a {
